# state-of-the-art-with-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ci.py  pyproject.toml  pytest.ini  start_monorepo.sh
.github/workflows/: test.yml
.streamlit/: config.toml
examples/: .gitignore  gyg.py  preferences.py
notebooks/: authentication_tables.ipynb  bookmarks.ipynb  debug_score_meaning.ipynb  inpect_tags.ipynb  inspct_recommendation_history.ipynb  inspect_bookmarks.ipynb  inspect_embeddings.ipynb  inspect_generated_paper_insights.ipynb  inspect_insights.ipynb  inspect_insights_summary.ipynb  inspect_interests.ipynb  inspect_papers.ipynb  inspect_papers_timeline.ipynb  inspect_questions.ipynb  inspect_report_relevance.ipynb  inspect_reports.ipynb  inspect_summaries.ipynb  inspect_topics.ipynb  local_llm.ipynb  manage_duplicates.ipynb  refine_reviews.ipynb  review_insights.ipynb  train_insight_scorer.ipynb  user_setup.ipynb  vector_database.ipynb
notebooks/.ipynb_checkpoints/: inspect_papers-checkpoint.ipynb
notebooks/insight_scorer/:  train.ipynb  train_train.ipynb
state_of_the_art/: CHANGELOG.md  README.md  __init__.py  arxiv_loader.py  arxiv_miner.py  arxiv_summary.py  arxiv_utils.py  audience.py  bookmark.py  ci_cd.py  config.py  container_startup.py  continuous_integration.py  episode_headlines.py  insight_extractor.py  llm.py  mail.py  open_ai_utils.py  paper.py  paper_insight.py  paper_miner.py  paper_ranker.py  papers.py  profile.py  retriver.py  review.py  scheduler.py  spot_papers.py  state_of_the_art.py  summaries.py  topic.py  topic_insights.py  validation.py  web_view.py
test/: __init__.py  conftest.py  test_arxiv.py  test_arxiv_api.py  test_base_table.py  test_bm25.py  test_comment.py  test_container_startup.py  test_crud.py  test_email.py  test_extractor.py  test_get_paper_pdf.py  test_inference.py  test_insight_extractor.py  test_interest_recommender.py  test_interests.py  test_paper.py  test_question_to_openai.py  test_recommender.py  test_s3_integration.py  test_sentry.py  test_tags.py  test_topcis.py  utils.py
(+179 files in other folders)
