[tool.poetry]
name = "state-of-the-art"
version = "0.1.2"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = "0.6.0"
openai = "^1.14.2"
pypdf = "^4.1.0"
pydantic = "1.10.14"
arxiv = "^2.1.0"
langchain = "^0.1.14"
langchain-community = "^0.0.31"
pyarrow = "*"
nltk = "^3.8.1"
rank-bm25 = "^0.2.2"
jupyter = "^1.0.0"
langchain-core = "^0.1.42"
chromadb = ">=0.5.0"
matplotlib = "^3.8.4"
urlextract = "^1.9.0"
tiny-data-warehouse = "0.2.*"
tqdm = "^4.66.2"
fpdf = "^1.7.2"
llama-index = "^0.10.37"
llama-index-llms-ollama = "^0.1.4"
beautifulsoup4 = "^4.12.3"

sentence-transformers = "^3.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sota = 'state_of_the_art.state_of_the_art:main'
